Refactored, added Docker support